# tauri-plugin-memio

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.cargo/: config.toml
android/: build.gradle.kts
android/src/main/java/app/tauri/memio/: MemioPlugin.kt
android/src/main/java/com/memio/jsbridge/: MemioJsBridge.kt
android/src/main/java/com/memio/shared/: MemioSharedMemory.kt
android/src/main/java/com/memio/webview/: MemioWebChromeClient.kt  MemioWebViewClient.kt
crates/memio/: Cargo.toml
crates/memio-core/: Cargo.toml  build.rs
crates/memio-core/benches/: serialization.rs
crates/memio-core/src/: arena.rs  error.rs  lib.rs  schema.rs  shared_header.rs  shared_state.rs  shared_state_spec.rs  state.rs
crates/memio-macros/: Cargo.toml
crates/memio-macros/src/: lib.rs
crates/memio-platform/: Cargo.toml
crates/memio-platform/src/: android.rs  lib.rs  linux.rs  memio_manager.rs  memio_shared.rs  registry.rs  shared_file.rs  shared_ring.rs  windows.rs
crates/memio/src/: android_jni.rs  lib.rs
crates/tauri-plugin-memio/: Cargo.toml  build.rs
crates/tauri-plugin-memio/android/: build.gradle.kts
crates/tauri-plugin-memio/android/src/main/java/app/tauri/memio/: MemioPlugin.kt
crates/tauri-plugin-memio/android/src/main/java/com/memio/spec/: MemioSpec.kt
crates/tauri-plugin-memio/android/src/main/java/com/memio/webview/: MemioWebViewClient.kt
crates/tauri-plugin-memio/permissions/: default.toml
crates/tauri-plugin-memio/permissions/autogenerated/: reference.md
crates/tauri-plugin-memio/permissions/autogenerated/commands/: commit_upload_buffer.toml  has_shared_buffer.toml  list_shared_buffers_windows.toml  memio_read.toml  memio_upload.toml  prepare_upload_buffer.toml  send_download_buffer.toml  write_shared_buffer_windows.toml  write_shared_buffer_windows_base64.toml  write_shared_buffer_windows_bytes.toml
crates/tauri-plugin-memio/permissions/schemas/: schema.json
crates/tauri-plugin-memio/src/: android.rs  commands.rs  lib.rs  linux.rs  windows.rs  windows_hostobject.rs  windows_shared_buffer.rs
docs/: Android.md  Architecture.md  Building.md  Linux.md  Windows.md
examples/memio-tauri-example/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/memio-tauri-example/scripts/: setup-android.sh  tauri-android-dev.js
examples/memio-tauri-example/src/: App.vue  main.ts  style.css
examples/memio-tauri-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/memio-tauri-example/src-tauri/capabilities/: default.json
examples/memio-tauri-example/src-tauri/src/: lib.rs  main.rs
extensions/webkit-linux/: extension.c  memio_spec.h  meson.build
guest-js/memio-client/: tsconfig.json
guest-js/memio-client/src/: client.ts  index.ts  provider.ts  shared-manifest-spec.ts  shared-state.ts  shared-types.ts  state-view.ts  unified.ts
guest-js/memio-client/src/platform/: android-memio-protocol.ts  android.ts  linux.ts  windows.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: commit_upload_buffer.toml  create_shared_buffer_windows.toml  has_shared_buffer.toml  memio_read.toml  memio_upload.toml  prepare_upload_buffer.toml  send_download_buffer.toml  start_upload_stream.toml  stop_upload_stream.toml
permissions/schemas/: schema.json
scripts/: gen_shared_state_spec.cjs
shared/: memio-helpers.js  shared_manifest_spec.json  shared_state_spec.json
src/: android.rs  commands.rs  lib.rs  linux.rs  windows.rs  windows_hostobject.rs  windows_shared_buffer.rs
