[workspace]
resolver = "2"
members = [
    "crates/memio-core",
    "crates/memio-platform",
    "crates/memio",
    "crates/memio-macros",
    "examples/memio-tauri-example/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/your-org/memio-tauri"
authors = ["MemioTauri Contributors"]

[workspace.dependencies]
# Serialização Zero-Copy
rkyv = { version = "0.8", features = ["bytecheck"] } # Removed invalid "validation" feature
bytecheck = "0.8"

# Tauri
tauri = { version = "2.0", features = ["protocol-asset"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Erros
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }

# Memória
memmap2 = "0.9"
