[workspace]
resolver = "2"
members = [
    "crates/memio-core",
    "crates/memio-platform",
    "crates/memio",
    "crates/memio-macros",
    "examples/memio-tauri-example/src-tauri",
]

[package]
name = "tauri-plugin-memio"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-memio"
description = "Memio shared-memory integration for Tauri (Linux + Android + Windows)."
license = "MIT"

[lib]
name = "tauri_plugin_memio"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memio-core = { path = "crates/memio-core" }
memio-platform = { path = "crates/memio-platform" }
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-core = "0.61"
webview2-com = "0.38"

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/your-org/memio-tauri"
authors = ["MemioTauri Contributors"]

[workspace.dependencies]
# Serialização Zero-Copy
rkyv = { version = "0.8", features = ["bytecheck"] } # Removed invalid "validation" feature
bytecheck = "0.8"

# Tauri
tauri = { version = "2.0", features = ["protocol-asset"] }

# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Erros
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Performance"] }

# Memória
memmap2 = "0.9"
