[package]
name = "memio"
version = "0.1.0"
edition = "2021"
description = "MemioTauri - Ultra-fast shared memory for Tauri applications"

[dependencies]
memio-core = { path = "../memio-core" }
memio-platform = { path = "../memio-platform" }
tauri-plugin-memio = { path = "../tauri-plugin-memio" }

# Re-export rkyv for users
rkyv = "0.8"
