[package]
name = "memio"
version = "0.1.0"
edition = "2021"
description = "MemioTauri - Ultra-fast shared memory for Tauri applications"

[dependencies]
memio-core = { path = "../memio-core" }
memio-platform = { path = "../memio-platform" }
tauri-plugin-memio = { path = "../.." }

# Re-export rkyv for users
rkyv = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
