[package]
name = "tauri-plugin-memio"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-memio"
description = "Memio shared-memory integration for Tauri (Linux + Android + Windows)."
license = "MIT"

[lib]
name = "tauri_plugin_memio"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memio-core = { path = "../memio-core" }
memio-platform = { path = "../memio-platform" }
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
] }
windows-core = "0.61"
webview2-com = "0.38"

[build-dependencies]
tauri-plugin = { version = "2.4", features = ["build"] }
